# toy-cheri-1

./: Cargo.toml  LICENSE  README.md  TODO
asm/: Cargo.toml
asm/examples/: add.asm  alloc.asm  cmp.asm  crash-1.asm  crash-3.asm  exit.asm  exploit-seal-unimpl.asm  fibonacci-iter.asm  fibonacci-recursive.asm  fibonacci.asm  int-literal.asm  jmp-back.asm
asm/src/: fmt.rs  lex.rs  lib.rs  parse.rs  parse1.rs  parse2.rs  test.rs  tests.rs
libasm/: Cargo.toml
libasm/examples/: alloc.asm  crash-2.asm  fibonacci-iter.asm  fibonacci-recursive.asm  fixme.asm  jmp-back.asm
libasm/src/: fmt.rs  lex.rs  parse1.rs  parse2.rs  tests.rs
libvm/: Cargo.toml
libvm/src/: access.rs  alloc.rs  exception.rs  int.rs  mem.rs  process.rs  registers.rs  revoke.rs  syscall.rs  tests.rs
libvm/src/abi/: core_impls.rs  structs.rs
vm/: Cargo.toml
vm-driver/: Cargo.toml
vm-driver/src/: debug.rs  exception.rs  main.rs  tests.rs
vm/src/: abi.rs  access.rs  alloc.rs  capability.rs  debug.rs  exception.rs  int.rs  lib.rs  main.rs  mem.rs  op.rs  process.rs  registers.rs  revoke.rs  syscall.rs  tests.rs
vm/src/abi/: core_impls.rs  custom.rs
vm/src/alloc/: bump.rs
