[package]
name = "fruticose-vm-driver"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "fruticose"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

fruticose-asm = { path = "../asm" }
fruticose-vm = { path = "../vm" }
