[package]
name = "fruticose-vm"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.70"
argh = "0.1.10"
bitvec = "1.0.1"
tracing = "0.1.38"
tracing-subscriber = "0.3.17"

[dev-dependencies]
nanorand = { version = "0.7.0", default-features = false, features = ["pcg64"] }
