[package]
name = "fruticose-vm-driver"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "fruticose"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
argh = "0.1.11"
ctrlc = "3.4.0"
nu-ansi-term = "0.49.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
unicode-segmentation = "1.10.1"
unicode-width = "0.1.10"

fruticose-asm = { path = "../libasm" }
fruticose-vm = { path = "../libvm" }
